<resources>
    <string name="app_name">FitnessTracker</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recent_workouts">Recent Workouts</string>
    <string name="name_of_exercise_hint">Name of exercise</string>
    <string name="enter_kg">kg</string>
    <string name="bench_press">Bench press</string>
    <string name="enter">Enter</string>
    <string name="squat">Squat</string>
    <string name="repetitions">Repetitions</string>
    <string name="title_activity_test">test</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
